syntax="proto3";

package teksteamclient.cm.messages.bodies;
option csharp_namespace = "TEKSteamClient.CM.Messages.Bodies";

message DepotDecryptionKey
{
	uint32 depot_id = 1;
	uint32 app_id = 2;
}